--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "tailwindcss": "^3.4.15",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
